implement swagger notation
